display all scores

--- a/templates/live_scores.html
+++ b/templates/live_scores.html
@@ -12,5 +12,8 @@
         <li></li> 
         { % endfor % }
     </ul>
+    <!-- <h4> {{ live_scores.player1set1[i] }} - {{ live_scores.player2set1[i] }}</h4> -->
+    <!-- <h1> {{ live_scores['tournament_type'][l-1] }} {{ live_scores['tournament'][l-1] }}</h1>
+          <h4> {{ live_scores['player1'][l-1] }} vs {{ live_scores['player2'][l-1] }} </h4> -->
 </body>
 </html>
